[gd_scene load_steps=7 format=3 uid="uid://bqeslfyg77nj6"]

[ext_resource type="Script" path="res://Scripts/SidePanelNodes/SentenceNodePanel.gd" id="1_626xh"]
[ext_resource type="Texture2D" uid="uid://t1i3wy037vsu" path="res://Assets/Icons/folder_icon.png" id="2_vudiy"]
[ext_resource type="Script" path="res://Scripts/FilePickerButton.gd" id="3_43bqn"]

[sub_resource type="LabelSettings" id="LabelSettings_c5sko"]
font_color = Color(0.521569, 0.521569, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxvmx"]
content_margin_left = 5.0
content_margin_right = 31.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.0862745, 0.0980392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_h2s8p"]
font_color = Color(0.768627, 0.180392, 0.25098, 1)

[node name="SentenceNodePanel" type="VBoxContainer"]
offset_right = 500.0
offset_bottom = 244.0
theme_override_constants/separation = 10
script = ExtResource("1_626xh")

[node name="SpeakerContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SubContainer" type="HBoxContainer" parent="SpeakerContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextLabel" type="Label" parent="SpeakerContainer/SubContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Speaker"

[node name="CharacterDrop" type="OptionButton" parent="SpeakerContainer/SubContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayNameContainer" type="MarginContainer" parent="SpeakerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="SubContainer" type="HBoxContainer" parent="SpeakerContainer/DisplayNameContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextLabel" type="Label" parent="SpeakerContainer/DisplayNameContainer/SubContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "↳ Display Name"
label_settings = SubResource("LabelSettings_c5sko")

[node name="LineEdit" type="LineEdit" parent="SpeakerContainer/DisplayNameContainer/SubContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplayVariantContainer" type="MarginContainer" parent="SpeakerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25

[node name="SubContainer" type="HBoxContainer" parent="SpeakerContainer/DisplayVariantContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextLabel" type="Label" parent="SpeakerContainer/DisplayVariantContainer/SubContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "↳ Display Variant"
label_settings = SubResource("LabelSettings_c5sko")

[node name="LineEdit" type="LineEdit" parent="SpeakerContainer/DisplayVariantContainer/SubContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SentenceContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextLabel" type="Label" parent="SentenceContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
text = "Sentence"

[node name="TextEdit" type="TextEdit" parent="SentenceContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
wrap_mode = 1
caret_blink = true

[node name="SubContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SubContainer"]
layout_mode = 2

[node name="TextLabel" type="Label" parent="SubContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Voiceline"

[node name="VoicelineContainer" type="VBoxContainer" parent="SubContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="SubContainer/VoicelineContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_vxvmx")
structured_text_bidi_override = 2

[node name="FilePickerButton" type="Button" parent="SubContainer/VoicelineContainer/LineEdit" node_paths=PackedStringArray("linked_lined_edit")]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
mouse_default_cursor_shape = 2
icon = ExtResource("2_vudiy")
flat = true
script = ExtResource("3_43bqn")
linked_lined_edit = NodePath("..")

[node name="WarnLabel" type="Label" parent="SubContainer/VoicelineContainer"]
layout_mode = 2
text = "File path not found!"
label_settings = SubResource("LabelSettings_h2s8p")

[connection signal="item_selected" from="SpeakerContainer/SubContainer/CharacterDrop" to="." method="_on_character_drop_item_selected"]
[connection signal="text_changed" from="SpeakerContainer/DisplayNameContainer/SubContainer/LineEdit" to="." method="_on_display_name_line_edit_text_changed"]
[connection signal="text_changed" from="SpeakerContainer/DisplayVariantContainer/SubContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_changed" from="SentenceContainer/TextEdit" to="." method="_on_sentence_text_edit_changed"]
[connection signal="pressed" from="SubContainer/VoicelineContainer/LineEdit/FilePickerButton" to="SubContainer/VoicelineContainer/LineEdit/FilePickerButton" method="_on_pressed"]
